--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -12,7 +12,124 @@
     "next": "Next",
     "previous": "Previous",
     "settings": "Settings",
-    "language": "Language"
+    "language": "Language",
+    "add": "Add",
+    "remove": "Remove",
+    "reset": "Reset",
+    "clear": "Clear",
+    "home": "Home",
+    "or": "or",
+    "players": "players",
+    "seed": "Seed",
+    "user": "User",
+    "startGame": "Start Game",
+    "needsRefresh": "Some effects require a page refresh to take effect. Please press F5 or refresh the page.",
+    "yes": "Yes",
+    "no": "No"
+  },
+  "appSettings": {
+    "tabs": {
+      "general": "General",
+      "language": "Language",
+      "theme": "Theme",
+      "data": "Data",
+      "about": "About"
+    },
+    "general": {
+      "title": "User Information",
+      "userIdentity": "User Identity",
+      "loggedIn": "Logged In",
+      "guestMode": "Guest Mode",
+      "loginHint": "Login to sync your preferences",
+      "googleLogin": "Google Login",
+      "appleLogin": "Apple Login",
+      "facebookLogin": "Facebook Login",
+      "githubLogin": "GitHub Login",
+      "emailLink": "Email Link",
+      "comingSoon": "Coming Soon",
+      "logout": "Log Out"
+    },
+    "language": {
+      "title": "Language Settings",
+      "selectLanguage": "Select Language",
+      "hint": "Switch application display language"
+    },
+    "data": {
+      "title": "Data Management",
+      "clearCache": "Clear Browser Cache",
+      "clearCacheHint": "Clear locally stored game data and settings",
+      "clearCacheBtn": "Clear Cache",
+      "resetSettings": "Restore Default Theme & Settings",
+      "resetSettingsHint": "Restore theme and all settings to default values",
+      "resetSettingsBtn": "Restore Defaults",
+      "passwordProtection": "Password Protection",
+      "passwordProtectionHint": "When enabled, advanced options and important actions require a password",
+      "enabled": "Enabled",
+      "disabled": "Disabled",
+      "resetPassword": "Reset Admin Password",
+      "resetPasswordHint": "Reset the password used for advanced options",
+      "resetPasswordBtn": "Reset Password",
+      "confirmClearCache": "Confirm Clear Cache",
+      "confirmClearCacheMsg": "This will clear all locally stored game data and settings. Are you sure you want to continue?",
+      "confirmResetSettings": "Confirm Restore Defaults",
+      "confirmResetSettingsMsg": "This will reset all theme settings to default values. Are you sure you want to continue?",
+      "cacheClearedMsg": "Cache cleared. The page will reload.",
+      "settingsResetMsg": "Settings restored to defaults. The page will reload.",
+      "newPassword": "New Password",
+      "confirmPassword": "Confirm Password",
+      "enterNewPassword": "Enter new password...",
+      "reenterPassword": "Re-enter password...",
+      "setPassword": "Set Password",
+      "enterPasswordError": "Please enter a new password",
+      "passwordMismatch": "Passwords do not match",
+      "passwordResetSuccess": "Admin password has been reset"
+    },
+    "about": {
+      "title": "About",
+      "appName": "Lucky Draw Gift Exchange System",
+      "version": "Version",
+      "build": "Build",
+      "termsOfService": "Terms of Service",
+      "privacyPolicy": "Privacy Policy",
+      "copyright": "© {year} maverick.hlc",
+      "allRightsReserved": "All rights reserved."
+    },
+    "terms": {
+      "title": "Terms of Service",
+      "section1Title": "1. Service Description",
+      "section1Content": "This service provides online lucky draw gift exchange functionality for entertainment purposes.",
+      "section2Title": "2. Usage Guidelines",
+      "section2Content": "Users must comply with relevant laws and regulations and may not use this service for illegal purposes.",
+      "section3Title": "3. Disclaimer",
+      "section3Content": "This service is provided \"as is\" without guarantee of uninterrupted or error-free operation.",
+      "section4Title": "4. Data Usage",
+      "section4SoloMode": "Host Mode",
+      "section4SoloContent": "Game data is stored only in your browser locally.",
+      "section4OnlineMode": "Online Mode",
+      "section4OnlineContent": "Room data is temporarily stored on the server database and automatically deleted 30 minutes after the room closes.",
+      "section5Title": "5. Terms Modification",
+      "section5Content": "We reserve the right to modify these terms at any time."
+    },
+    "privacy": {
+      "title": "Privacy Policy",
+      "section1Title": "1. Data Collection",
+      "section1Content": "We only collect necessary data for game operation, such as room codes and player nicknames. We do not collect any personally identifiable information.",
+      "section2Title": "2. Data Storage",
+      "section2SoloMode": "Host Mode",
+      "section2SoloContent": "All data is stored only in your browser's localStorage and is not uploaded to the server.",
+      "section2OnlineMode": "Online Mode",
+      "section2OnlineContent": "Room data is temporarily stored in the server's SQLite database and automatically deleted 30 minutes after the room closes.",
+      "section2ThemeSettings": "Theme Settings",
+      "section2ThemeContent": "Stored locally in your browser.",
+      "section3Title": "3. Data Sharing",
+      "section3Content": "We do not share your data with third parties.",
+      "section4Title": "4. Cookie Usage",
+      "section4Content": "This service uses localStorage to store preferences and reconnection tokens. We do not use tracking cookies.",
+      "section5Title": "5. Your Rights",
+      "section5Content": "You can use the \"Clear Cache\" function at any time to delete all locally stored data.",
+      "section6Title": "6. Contact Us",
+      "section6Content": "For any privacy-related questions, please contact maverick.hlc."
+    }
   },
   "home": {
     "title": "Choose Game Mode",
@@ -45,7 +162,48 @@
     "joining": "Joining...",
     "spectatorMode": "Spectator Mode",
     "spectatorNotice": "You will join as spectator, can only watch but not participate",
-    "startViewing": "Start Viewing"
+    "startViewing": "Start Viewing",
+    "roomInfo": "Room Info",
+    "copyLink": "Copy Link",
+    "copySpectatorLink": "Spectator Link",
+    "playerHint": "Enter {min} ~ {max} players"
+  },
+  "online": {
+    "ownDevice": "Participate with your own device",
+    "connecting": "Connecting...",
+    "roomInfo": "Room Info",
+    "shareHint": "Share the room code with friends to join!",
+    "copyLink": "Copy Link",
+    "spectatorLink": "Spectator Link",
+    "copySpectatorLink": "Copy Spectator Link",
+    "playerList": "Player List",
+    "you": "You",
+    "changeName": "Change Name",
+    "ready": "Ready",
+    "waiting": "Waiting",
+    "readyStatus": "Ready Status",
+    "imReady": "I'm Ready",
+    "cancelReady": "Cancel Ready",
+    "hostControl": "Host Control",
+    "currentPlayers": "Current Players",
+    "addPlayer": "Add Player",
+    "enterPlayerName": "Enter player name...",
+    "allowSpectators": "Allow Spectators",
+    "forceStart": "Force Start",
+    "leaveRoom": "Leave Room",
+    "notAllReady": "Some players are not ready, force start will ignore ready status",
+    "yourTurn": "It's your turn! Click to start drawing",
+    "hostCanDraw": "You can draw on behalf of the player",
+    "waitingFor": "Waiting for {name} to draw...",
+    "hostLeaveWarning": "You are the host, the room will be disbanded if you leave!",
+    "confirmLeaveRoom": "Are you sure you want to leave the room?",
+    "enterNewName": "Enter new name...",
+    "hostOnly": "Host only",
+    "hostFirst": "Host first",
+    "maxPlayersWarning": "Max players cannot be less than current players ({count})",
+    "advancedHostOnly": "Advanced settings can only be modified by the host",
+    "contactHost": "Please contact the host to modify room settings",
+    "scanQR": "Scan QR Code to join"
   },
   "game": {
     "waiting": "Waiting",
@@ -65,7 +223,31 @@
     "result": "Result",
     "drawer": "Drawer",
     "giftOwner": "Gift Owner",
-    "order": "Order"
+    "order": "Order",
+    "participants": "Participants",
+    "addParticipant": "Enter new participant name...",
+    "drawSettings": "Draw Settings",
+    "randomFirst": "Randomly choose first drawer",
+    "manualFirst": "Manual selection",
+    "selectParticipant": "Select participant",
+    "resetSeed": "Reset Seed",
+    "resetAll": "Reset All",
+    "clearCache": "Clear Cache",
+    "viewSettings": "View Settings",
+    "currentSettings": "Current Settings",
+    "startMode": "Start Mode",
+    "random": "Random",
+    "manual": "Manual",
+    "progress": "Progress",
+    "backToDraw": "Back to Draw",
+    "preparing": "Preparing result page...",
+    "hostControl": "Host Control",
+    "nextDrawerLabel": "Next Drawer",
+    "preparingDraw": "Preparing...",
+    "startDraw": "Start Draw",
+    "drawing": "Drawing...",
+    "drawResult": "Draw Result",
+    "viewResult": "View Result"
   },
   "share": {
     "title": "Share Result",
@@ -74,7 +256,7 @@
     "download": "Download Image",
     "copyLink": "Copy Link",
     "copied": "Copied to clipboard!",
-    "shareTo": "Share to...",
+    "shareTo": "Share to:",
     "socialPlatforms": {
       "instagram": "Instagram",
       "threads": "Threads",
@@ -103,7 +285,17 @@
     "siteName": "Site Name",
     "subtitle": "Subtitle",
     "iconLeft": "Left Icon",
-    "iconRight": "Right Icon"
+    "iconRight": "Right Icon",
+    "passwordProtection": "Password Protection",
+    "resetPassword": "Reset Admin Password",
+    "setPassword": "Set Admin Password",
+    "passwordHint": "This password protects reset functions from accidental use",
+    "confirmPassword": "Confirm Password",
+    "fixedPairs": "Fixed Pairs",
+    "addFixedPair": "Add Pair",
+    "drawerA": "Drawer A",
+    "giftB": "Gift B",
+    "fixedPairHint": "Specify that A must get B's gift"
   },
   "errors": {
     "roomNotFound": "Room not found or disbanded",
@@ -112,7 +304,11 @@
     "connectionFailed": "Connection failed",
     "timeout": "Operation timeout, please retry",
     "invalidInput": "Invalid input",
-    "unknownError": "Unknown error occurred"
+    "unknownError": "Unknown error occurred",
+    "sameAB": "A and B cannot be the same",
+    "alreadyExists": "This setting already exists",
+    "copyFailed": "Copy failed, please copy manually",
+    "shareFailed": "Share failed, please try downloading the image"
   },
   "notifications": {
     "playerJoined": "{name} joined the room",
@@ -122,6 +318,70 @@
     "gameStarted": "Game started!",
     "gameComplete": "Game complete!",
     "hostTransferred": "Host transferred to {name}",
-    "roomDisbanded": "Room disbanded"
+    "roomDisbanded": "Room disbanded",
+    "linkCopied": "Link copied!",
+    "resultCopied": "Result copied to clipboard!",
+    "downloadComplete": "Download complete!"
+  },
+  "modal": {
+    "confirmClear": "Confirm Clear",
+    "confirmReset": "Confirm Reset",
+    "confirmLeave": "Confirm Leave",
+    "roomDisbanded": "Room Disbanded",
+    "hostLeft": "Host has left, room disbanded.",
+    "advancedVerify": "Advanced Options Verification",
+    "resetSeedTitle": "Reset Seed",
+    "resetAllTitle": "Reset All",
+    "resetAllDesc": "This will clear all data and return to setup page",
+    "clearCacheTitle": "Clear Cache",
+    "clearCacheDesc": "This will clear all local storage data, including password settings.",
+    "soloSetup": "Host Mode Setup",
+    "playerCount": "Number of Participants",
+    "playerCountHint": "Enter {min} ~ {max} players",
+    "createRoom": "Create New Room",
+    "joinRoom": "Join Room",
+    "watchRoom": "Watch Room",
+    "yourName": "Your Name",
+    "enterName": "Enter your name...",
+    "maxPlayers": "Max Room Capacity",
+    "creating": "Creating...",
+    "joining": "Joining...",
+    "roomCode": "Room Code",
+    "enterRoomCode": "Enter room code...",
+    "spectatorNotice": "You will join as a spectator, you can only watch and cannot participate in the draw",
+    "startWatching": "Start Watching"
+  },
+  "error": {
+    "cannotJoinRoom": "Cannot join this room",
+    "roomNotExists": "Room {code} does not exist or has been disbanded",
+    "cannotCheckRoom": "Unable to check room status",
+    "playerCountRange": "Number of players must be between {min}-{max}",
+    "pleaseEnterName": "Please enter your name",
+    "pleaseEnterRoomCode": "Please enter room code",
+    "createRoomTimeout": "Room creation timeout, please try again",
+    "joinRoomTimeout": "Join room timeout, please try again",
+    "pleaseEnterPassword": "Please enter password!",
+    "passwordMismatch": "Passwords do not match!",
+    "wrongPassword": "Wrong password!",
+    "minParticipants": "At least 2 participants required!",
+    "selectStarter": "Please select the starting drawer!",
+    "cannotGenerateSequence": "Cannot generate valid draw sequence, please check if advanced settings cause conflicts",
+    "noPasswordSet": "Admin password not set, please set password in settings first"
+  },
+  "notifications": {
+    "playerJoined": "{name} joined the room",
+    "playerLeft": "{name} left the room",
+    "playerDisconnected": "{name} disconnected",
+    "playerReconnected": "{name} reconnected",
+    "gameStarted": "Game started!",
+    "gameComplete": "Game complete!",
+    "hostTransferred": "Host transferred to {name}",
+    "roomDisbanded": "Room disbanded",
+    "linkCopied": "Link copied!",
+    "resultCopied": "Result copied to clipboard!",
+    "downloadComplete": "Download complete!",
+    "passwordSet": "Password set successfully!",
+    "seedReset": "Seed reset to: {seed}",
+    "cacheCleared": "Cache cleared! Page will reload."
   }
 }
