--- a/i18n/locales/zh-HK.json
+++ b/i18n/locales/zh-HK.json
@@ -12,7 +12,124 @@
     "next": "下一步",
     "previous": "上一步",
     "settings": "設定",
-    "language": "語言"
+    "language": "語言",
+    "add": "新增",
+    "remove": "移除",
+    "reset": "重設",
+    "clear": "清除",
+    "home": "返回首頁",
+    "or": "或",
+    "players": "人",
+    "seed": "Seed",
+    "user": "用戶",
+    "startGame": "開始遊戲",
+    "needsRefresh": "部分效果需要重新整理頁面才能生效，請按 F5 或重新整理",
+    "yes": "是",
+    "no": "否"
+  },
+  "appSettings": {
+    "tabs": {
+      "general": "一般",
+      "language": "語言",
+      "theme": "主題",
+      "data": "資料",
+      "about": "關於"
+    },
+    "general": {
+      "title": "使用者資訊",
+      "userIdentity": "使用者身份",
+      "loggedIn": "已登入",
+      "guestMode": "訪客模式",
+      "loginHint": "登入後可同步您的偏好設定",
+      "googleLogin": "Google 登入",
+      "appleLogin": "Apple 登入",
+      "facebookLogin": "Facebook 登入",
+      "githubLogin": "GitHub 登入",
+      "emailLink": "Email 連結",
+      "comingSoon": "即將推出",
+      "logout": "登出帳號"
+    },
+    "language": {
+      "title": "語言設定",
+      "selectLanguage": "選擇語言",
+      "hint": "切換應用程式顯示語言"
+    },
+    "data": {
+      "title": "資料管理",
+      "clearCache": "清理瀏覽器緩存",
+      "clearCacheHint": "清除本地儲存的遊戲資料和設定",
+      "clearCacheBtn": "清理緩存",
+      "resetSettings": "恢復預設主題與設定",
+      "resetSettingsHint": "將主題和所有設定恢復為預設值",
+      "resetSettingsBtn": "恢復預設",
+      "passwordProtection": "密碼保護功能",
+      "passwordProtectionHint": "啟用後，進階選項和重要操作需要輸入密碼",
+      "enabled": "已啟用",
+      "disabled": "已停用",
+      "resetPassword": "重設管理員密碼",
+      "resetPasswordHint": "重設用於進階選項的管理員密碼",
+      "resetPasswordBtn": "重設密碼",
+      "confirmClearCache": "確認清理緩存",
+      "confirmClearCacheMsg": "這將清除所有本地儲存的遊戲資料和設定，確定要繼續嗎？",
+      "confirmResetSettings": "確認恢復默認設置",
+      "confirmResetSettingsMsg": "這將重置所有主題設定為預設值，確定要繼續嗎？",
+      "cacheClearedMsg": "緩存已清理完成，頁面將重新載入",
+      "settingsResetMsg": "設定已恢復為默認值，頁面將重新載入",
+      "newPassword": "新密碼",
+      "confirmPassword": "確認密碼",
+      "enterNewPassword": "輸入新密碼...",
+      "reenterPassword": "再次輸入密碼...",
+      "setPassword": "設定密碼",
+      "enterPasswordError": "請輸入新密碼",
+      "passwordMismatch": "兩次輸入的密碼不一致",
+      "passwordResetSuccess": "管理員密碼已重設"
+    },
+    "about": {
+      "title": "關於",
+      "appName": "抽獎交換禮物系統",
+      "version": "版本",
+      "build": "Build",
+      "termsOfService": "服務條款",
+      "privacyPolicy": "隱私權政策",
+      "copyright": "© {year} maverick.hlc",
+      "allRightsReserved": "All rights reserved."
+    },
+    "terms": {
+      "title": "服務條款",
+      "section1Title": "1. 服務說明",
+      "section1Content": "本服務提供線上抽獎交換禮物功能，供使用者娛樂使用。",
+      "section2Title": "2. 使用規範",
+      "section2Content": "使用者應遵守相關法規，不得將本服務用於非法目的。",
+      "section3Title": "3. 免責聲明",
+      "section3Content": "本服務按「現狀」提供，不保證服務不會中斷或無錯誤。",
+      "section4Title": "4. 資料使用",
+      "section4SoloMode": "主持模式",
+      "section4SoloContent": "遊戲資料僅存於您的瀏覽器本地。",
+      "section4OnlineMode": "連線模式",
+      "section4OnlineContent": "房間資料暫存於伺服器資料庫，房間關閉後 30 分鐘自動清除。",
+      "section5Title": "5. 條款修改",
+      "section5Content": "我們保留隨時修改本條款的權利。"
+    },
+    "privacy": {
+      "title": "隱私權政策",
+      "section1Title": "1. 資料收集",
+      "section1Content": "我們僅收集必要的遊戲運作資料，如房間代碼、玩家暱稱等。不收集任何個人識別資訊。",
+      "section2Title": "2. 資料儲存",
+      "section2SoloMode": "主持模式",
+      "section2SoloContent": "所有資料僅存於您的瀏覽器 localStorage，不會上傳至伺服器。",
+      "section2OnlineMode": "連線模式",
+      "section2OnlineContent": "房間資料暫存於伺服器 SQLite 資料庫，房間關閉後 30 分鐘自動清除。",
+      "section2ThemeSettings": "主題設定",
+      "section2ThemeContent": "儲存於您的瀏覽器本地。",
+      "section3Title": "3. 資料分享",
+      "section3Content": "我們不會將您的資料分享給第三方。",
+      "section4Title": "4. Cookie 使用",
+      "section4Content": "本服務使用 localStorage 儲存偏好設定和重連令牌，不使用追蹤 Cookie。",
+      "section5Title": "5. 您的權利",
+      "section5Content": "您可以隨時使用「清理緩存」功能刪除本地儲存的所有資料。",
+      "section6Title": "6. 聯絡我們",
+      "section6Content": "如有任何隱私相關問題，請聯繫 maverick.hlc。"
+    }
   },
   "home": {
     "title": "選擇遊戲模式",
@@ -45,7 +162,48 @@
     "joining": "加入中...",
     "spectatorMode": "觀眾模式",
     "spectatorNotice": "你將以觀眾身份加入，只能觀看不能參與抽獎",
-    "startViewing": "開始觀看"
+    "startViewing": "開始觀看",
+    "roomInfo": "房間資訊",
+    "copyLink": "複製連結",
+    "copySpectatorLink": "觀眾連結",
+    "playerHint": "可輸入 {min} ~ {max} 人"
+  },
+  "online": {
+    "ownDevice": "用自己的裝置參與",
+    "connecting": "正在連線...",
+    "roomInfo": "房間資訊",
+    "shareHint": "分享房間代碼給朋友加入！",
+    "copyLink": "複製連結",
+    "spectatorLink": "觀眾連結",
+    "copySpectatorLink": "複製觀眾連結",
+    "playerList": "玩家列表",
+    "you": "你",
+    "changeName": "更改名稱",
+    "ready": "準備",
+    "waiting": "等待",
+    "readyStatus": "準備狀態",
+    "imReady": "我準備好了",
+    "cancelReady": "取消準備",
+    "hostControl": "主機控制",
+    "currentPlayers": "目前人數",
+    "addPlayer": "協助加入玩家",
+    "enterPlayerName": "輸入玩家名字...",
+    "allowSpectators": "允許觀眾加入",
+    "forceStart": "強制開始",
+    "leaveRoom": "離開房間",
+    "notAllReady": "有玩家尚未準備，強制開始將忽略未準備狀態",
+    "yourTurn": "輪到你了！點擊開始抽獎",
+    "hostCanDraw": "你可以代替玩家抽獎",
+    "waitingFor": "等待 {name} 抽獎中...",
+    "hostLeaveWarning": "你是主機，離開後房間將解散！",
+    "confirmLeaveRoom": "確定要離開房間嗎？",
+    "enterNewName": "輸入新名稱...",
+    "hostOnly": "僅主持人可見",
+    "hostFirst": "主機優先",
+    "maxPlayersWarning": "人數上限不能小於目前人數 ({count})",
+    "advancedHostOnly": "進階設定僅主持人可修改",
+    "contactHost": "如需修改房間設定，請聯繫主持人",
+    "scanQR": "掃描 QR Code 加入"
   },
   "game": {
     "waiting": "等待中",
@@ -65,7 +223,31 @@
     "result": "結果",
     "drawer": "抽獎者",
     "giftOwner": "禮物擁有者",
-    "order": "順序"
+    "order": "順序",
+    "participants": "參與者名單",
+    "addParticipant": "輸入新參與者姓名...",
+    "drawSettings": "抽獎設定",
+    "randomFirst": "隨機決定第一位抽獎者",
+    "manualFirst": "手動指定",
+    "selectParticipant": "選擇參與者",
+    "resetSeed": "重設 Seed",
+    "resetAll": "重置全部",
+    "clearCache": "清除緩存",
+    "viewSettings": "查看設定",
+    "currentSettings": "目前設定",
+    "startMode": "起始模式",
+    "random": "隨機",
+    "manual": "手動指定",
+    "progress": "目前進度",
+    "backToDraw": "返回抽獎",
+    "preparing": "正在準備結果頁面...",
+    "hostControl": "主持人控制",
+    "nextDrawerLabel": "下一位抽獎者",
+    "preparingDraw": "準備中...",
+    "startDraw": "開始抽獎",
+    "drawing": "抽獎中...",
+    "drawResult": "抽獎結果",
+    "viewResult": "查看結果"
   },
   "share": {
     "title": "分享結果",
@@ -74,7 +256,7 @@
     "download": "下載圖片",
     "copyLink": "複製連結",
     "copied": "已複製到剪貼簿！",
-    "shareTo": "分享到...",
+    "shareTo": "快速分享至：",
     "socialPlatforms": {
       "instagram": "Instagram",
       "threads": "Threads",
@@ -103,7 +285,17 @@
     "siteName": "網站名稱",
     "subtitle": "副標題",
     "iconLeft": "左側圖示",
-    "iconRight": "右側圖示"
+    "iconRight": "右側圖示",
+    "passwordProtection": "密碼保護",
+    "resetPassword": "重設管理員密碼",
+    "setPassword": "設定管理員密碼",
+    "passwordHint": "此密碼用於保護重置功能，防止誤操作",
+    "confirmPassword": "確認密碼",
+    "fixedPairs": "指定配對",
+    "addFixedPair": "新增配對",
+    "drawerA": "抽獎者 A",
+    "giftB": "禮物 B",
+    "fixedPairHint": "指定 A 必須抽到 B 的禮物"
   },
   "errors": {
     "roomNotFound": "房間不存在或已解散",
@@ -112,7 +304,11 @@
     "connectionFailed": "連線失敗",
     "timeout": "操作逾時，請重試",
     "invalidInput": "輸入無效",
-    "unknownError": "發生未知錯誤"
+    "unknownError": "發生未知錯誤",
+    "sameAB": "A 和 B 不能相同",
+    "alreadyExists": "此項目已存在設定",
+    "copyFailed": "複製失敗，請手動複製",
+    "shareFailed": "分享失敗，請嘗試下載圖片"
   },
   "notifications": {
     "playerJoined": "{name} 加入了房間",
@@ -122,6 +318,70 @@
     "gameStarted": "遊戲開始！",
     "gameComplete": "遊戲結束！",
     "hostTransferred": "主持人已轉移給 {name}",
-    "roomDisbanded": "房間已解散"
+    "roomDisbanded": "房間已解散",
+    "linkCopied": "連結已複製！",
+    "resultCopied": "結果已複製到剪貼簿！",
+    "downloadComplete": "下載完成！"
+  },
+  "modal": {
+    "confirmClear": "確認清除",
+    "confirmReset": "確認重設",
+    "confirmLeave": "確認離開",
+    "roomDisbanded": "房間已解散",
+    "hostLeft": "主機已離開，房間已解散。",
+    "advancedVerify": "進階選項驗證",
+    "resetSeedTitle": "重設 Seed",
+    "resetAllTitle": "重置全部",
+    "resetAllDesc": "這將清除所有資料並回到設定頁面",
+    "clearCacheTitle": "清除緩存",
+    "clearCacheDesc": "這將清除所有本地儲存資料，包括密碼設定。",
+    "soloSetup": "主持模式設定",
+    "playerCount": "參與人數",
+    "playerCountHint": "可輸入 {min} ~ {max} 人",
+    "createRoom": "建立新房間",
+    "joinRoom": "加入房間",
+    "watchRoom": "觀看房間",
+    "yourName": "你的名字",
+    "enterName": "輸入你的名字...",
+    "maxPlayers": "房間人數上限",
+    "creating": "建立中...",
+    "joining": "加入中...",
+    "roomCode": "房間代碼",
+    "enterRoomCode": "輸入房間代碼...",
+    "spectatorNotice": "你將以觀眾身份加入，只能觀看不能參與抽獎",
+    "startWatching": "開始觀看"
+  },
+  "error": {
+    "cannotJoinRoom": "無法加入此房間",
+    "roomNotExists": "房間 {code} 不存在或已解散",
+    "cannotCheckRoom": "無法檢查房間狀態",
+    "playerCountRange": "人數須在 {min}-{max} 之間",
+    "pleaseEnterName": "請輸入你的名字",
+    "pleaseEnterRoomCode": "請輸入房間代碼",
+    "createRoomTimeout": "建立房間逾時，請重試",
+    "joinRoomTimeout": "加入房間逾時，請重試",
+    "pleaseEnterPassword": "請輸入密碼！",
+    "passwordMismatch": "兩次密碼不一致！",
+    "wrongPassword": "密碼錯誤！",
+    "minParticipants": "至少需要 2 位參與者！",
+    "selectStarter": "請選擇起始抽獎者！",
+    "cannotGenerateSequence": "無法生成有效的抽獎序列，請檢查進階設定是否造成衝突",
+    "noPasswordSet": "尚未設定管理員密碼，請先在設定中設定密碼"
+  },
+  "notifications": {
+    "playerJoined": "{name} 加入了房間",
+    "playerLeft": "{name} 離開了房間",
+    "playerDisconnected": "{name} 已斷線",
+    "playerReconnected": "{name} 重新連線",
+    "gameStarted": "遊戲開始！",
+    "gameComplete": "遊戲結束！",
+    "hostTransferred": "主持人已轉移給 {name}",
+    "roomDisbanded": "房間已解散",
+    "linkCopied": "連結已複製！",
+    "resultCopied": "結果已複製到剪貼簿！",
+    "downloadComplete": "下載完成！",
+    "passwordSet": "密碼設定成功！",
+    "seedReset": "Seed 已重設為: {seed}",
+    "cacheCleared": "緩存已清除！頁面將重新載入。"
   }
 }
