feat: 使用密碼保護重構遊戲重設及快取清除邏輯
- 新增處理「全部重設」及「清除快取」操作的功能函式。
- 強化 confirmResetSeed 和 confirmClearCache 函式，以配合密碼保護設定。
- 更新 ResultsList 元件，顯示抽籤狀態及當前抽籤者名稱。
- 在 roomService 中實作房間刪除邏輯，當無玩家連線時自動清除資料。
- 將版本號更新至 0.8.3。

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -25,7 +25,8 @@
     "startGame": "Start Game",
     "needsRefresh": "Some effects require a page refresh to take effect. Please press F5 or refresh the page.",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "comingSoon": "Coming Soon"
   },
   "appSettings": {
     "tabs": {
@@ -383,5 +384,10 @@
     "passwordSet": "Password set successfully!",
     "seedReset": "Seed reset to: {seed}",
     "cacheCleared": "Cache cleared! Page will reload."
+  },
+  "results": {
+    "title": "Draw Results",
+    "empty": "No draw results yet",
+    "drawing": "Drawing..."
   }
 }
