feat: 改善網上遊戲體驗，加入連線逾時處理及開局指示
- 新增連線逾時警告及返回主頁按鈕 (online.vue)
- 改良開局按鈕，加入載入指示及停用狀態
- 優化 WebSocket 即時廣播以確保動畫同步
- 實施靜默預檢查機制於遊戲開始前
- 增強日誌記錄以提升除錯及狀態追蹤
- 更新遊戲開局相關 UI 翻譯
- 版本升級至 0.11.0

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -191,6 +191,7 @@
     "enterPlayerName": "Enter player name...",
     "allowSpectators": "Allow Spectators",
     "forceStart": "Force Start",
+    "startingGame": "Starting game...",
     "leaveRoom": "Leave Room",
     "notAllReady": "Some players are not ready, force start will ignore ready status",
     "yourTurn": "It's your turn! Click to start drawing",
