feat: 新增應用程式儲存庫連結至設定面板，並更新相關配置與翻譯

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -92,6 +92,7 @@
       "build": "Build",
       "termsOfService": "Terms of Service",
       "privacyPolicy": "Privacy Policy",
+      "viewRepo": "View source on GitHub",
       "copyright": "© {year} maverick.hlc",
       "allRightsReserved": "All rights reserved."
     },
