--- a/i18n/locales/zh-HK.json
+++ b/i18n/locales/zh-HK.json
@@ -92,6 +92,7 @@
       "build": "Build",
       "termsOfService": "服務條款",
       "privacyPolicy": "隱私權政策",
+      "viewRepo": "檢視原始碼 (GitHub)",
       "copyright": "© {year} maverick.hlc",
       "allRightsReserved": "All rights reserved."
     },
